--- a/app/javascript/flavours/glitch/styles/components/media.scss
+++ b/app/javascript/flavours/glitch/styles/components/media.scss
@@ -66,7 +66,7 @@
 
 .media-gallery {
   box-sizing: border-box;
-  margin-top: 8px;
+  // margin-top: 8px;
   overflow: hidden;
   border-radius: 4px;
   position: relative;
